--- a/src/app/modules/auth/components/login/login-form.component.html
+++ b/src/app/modules/auth/components/login/login-form.component.html
@@ -7,12 +7,12 @@
       <strong>Success! </strong>{{authSuccess}}
     </div>
     <div class="form-group">
-      <input formControlName="email" autocomplete="off" class="form-control" type="text"
+      <input formControlName="email" required autocomplete="off" class="form-control" type="text"
         placeholder="Username/Email" />
     </div>
 
     <div class="form-group">
-      <input formControlName="password" autocomplete="off" class="form-control" type="password"
+      <input formControlName="password" required autocomplete="off" class="form-control" type="password"
         placeholder="Password" />
     </div>
     <div class="remember-me">
