--- a/src/app/modules/auth/components/login/login-form.component.html
+++ b/src/app/modules/auth/components/login/login-form.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="login-bar">
-    <button type="submit" class="btn btn-default" [disabled]="!loginForm.valid || loginForm.pristine">
+    <button type="submit" class="btn btn-default" [disabled]="!loginForm.valid">
       <span *ngIf="showLoading">Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
       <span *ngIf="!showLoading">Login</span>
     </button>
