--- a/src/app/modules/auth/components/profile/profile.component.html
+++ b/src/app/modules/auth/components/profile/profile.component.html
@@ -41,16 +41,16 @@
               </div>
               <div class="col-md-8">
                 <h4 class="font-1em black-light avenir-r mb-20">Personal details</h4>
-                <form [formGroup]="profileForm" class="login-form go-bottom" (ngSubmit)="updateProfile()">
+                <form [formGroup]="profileForm" class="login-form go-bottom" (ngSubmit)="updateUserProfile()">
                   <div>
 
-                    <!-- <div class="alert alert-success" ng-if="showAuthSuccess">
+                    <div class="alert alert-success" *ngIf="authSuccess">
                       <strong>Success! </strong>{{authSuccess}}
-                    </div> -->
+                    </div>
 
-                    <!-- <div class="alert alert-danger" ng-if="showAuthError">
+                    <div class="alert alert-danger" *ngIf="authError">
                       <strong>Error! </strong>{{authError}}
-                    </div> -->
+                    </div>
                     <!--<div class="row">-->
 
                     <div class="form-group">
@@ -107,12 +107,15 @@
                     </div>
                     <div class="form-group">
                       <label for="location">Phone Number <span class="optional">(optional)</span></label>
-                      <input autocomplete="off" formControlName="phoneNumber" type="text" placeholder="Phonenumber" />
+                      <input autocomplete="off" formControlName="phoneNumber" type="text" />
 
                     </div>
 
                     <div class="form-group">
-                      <button class="submit-btn" [disabled]="!profileForm.valid">Update Account</button>
+                      <button class="submit-btn" [disabled]="!profileForm.valid || profileForm.pristine">
+                        <span *ngIf="showLoading">Update Account&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
+                        <span *ngIf="!showLoading">Update Account</span>
+                      </button>
                     </div>
                   </div>
                 </form>
@@ -211,7 +214,9 @@
                         <span
                           *ngIf="passwordResetForm.get('matchPassword').get('confirmPassword').errors?.required">Please
                           confirm your password.</span>
-                        <span *ngIf="passwordResetForm.get('matchPassword').errors?.notMatched && !passwordResetForm.get('matchPassword').get('confirmPassword').errors?.required">Passwords do not
+                        <span
+                          *ngIf="passwordResetForm.get('matchPassword').errors?.notMatched && !passwordResetForm.get('matchPassword').get('confirmPassword').errors?.required">Passwords
+                          do not
                           match.</span>
                       </span>
                     </div>
