add forgot password component

--- a/src/app/modules/auth/components/login/login-form.component.html
+++ b/src/app/modules/auth/components/login/login-form.component.html
@@ -21,7 +21,7 @@
         <label class="form-check-label" for="chk-remeber-me"></label>
         <label class="form-check-label" for="chk-remeber-me">Remember me</label>
       </div>
-      <p class="message pull-right"><a [routerLink]="'forgotpassword'">Forgot Password?</a></p>
+      <p class="message pull-right"><a [routerLink]="'/forgotpassword'">Forgot Password?</a></p>
     </div>
   </div>
   <div class="login-bar">
