--- a/src/app/modules/auth/components/user-login/user-login.component.html
+++ b/src/app/modules/auth/components/user-login/user-login.component.html
@@ -24,7 +24,7 @@
           <button type="submit" [disabled]="!loginForm.valid">Login</button>
           <div>
             <p class="message pull-left">Not registered? <a [routerLink]="['/auth/register']">Create an account</a></p>
-            <p class="message pull-right"><a [routerLink]="">Forgot Password?</a></p>
+            <p class="message pull-right"><a [routerLink]="['/auth/forgotPassword']">Forgot Password?</a></p>
           </div>
         </form>
       </div>
