--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -1,30 +1,40 @@
 <main class="login-main ">
-    <div class="container">
-        <div class="login-page">
-            <div class="form">
-                <form class="login-form">
-                    <div class="login-logo">
-                        <a href="https://www.blavatnikarchive.org/"><img
-                                src="https://www.blavatnikarchive.org/assets/images/logo.png" alt="img"></a>
-                    </div>
-                    <p>Enter Your Email</p>
-                    <!-- <div class="alert alert-success">
+  <div class="container">
+    <div class="login-page">
+      <div class="form">
+        <form class="login-form" [formGroup]="passwordResetForm" (ngSubmit)="passwordReset()">
+          <div class="login-logo">
+            <a href="https://www.blavatnikarchive.org/">
+              <img src="https://www.blavatnikarchive.org/assets/images/logo.png" alt="img">
+            </a>
+          </div>
+          <p>Enter Your Email</p>
+          <!-- <div class="alert alert-danger" *ngIf="authError">
+            <strong>Error! </strong>{{authError}}
+          </div>
+          <div class="alert alert-success" *ngIf="authSuccess">
+            <strong>Success! </strong>{{authSuccess}}
+          </div> -->
 
-                    </div> -->
-                    <!-- <div style="margin-bottom: 0px;" class="alert alert-danger" role="alert">
-                        <span ng-show="userForm.email.$error.required">Email is required.</span>
-                        <span ng-show="userForm.email.$error.email" class="ng-hide">Invalid email address.</span>
-                        <span ng-show="isServerError &amp;&amp; !userForm.email.$error.required &amp;&amp; !userForm.email.$error.email" class="ng-binding ng-hide"></span>
-                    </div> -->
+          <div style="margin-bottom: 0px;" class="alert alert-danger" role="alert"
+            *ngIf="passwordResetForm.get('email').touched && passwordResetForm.get('email').dirty && !passwordResetForm.get('email').valid">
+            <span *ngIf="passwordResetForm.get('email').errors?.required">Email is
+              required.</span>
+            <span
+              *ngIf="!passwordResetForm.get('email').valid && !passwordResetForm.get('email').errors?.required">Invalid
+              email
+              address.</span>
 
-                    <input name="email" formControlName="email" type="email" placeholder="Email" class="">
-                    <button type="submit">Send</button>
-                    <div>
-                        <p class="message pull-left"><a href="">Login</a></p>
-                        <p class="message pull-right"><a href="">Dashboard</a></p>
-                    </div>
-                </form>
-            </div>
-        </div>
+          </div>
+
+          <input name="email" formControlName="email" type="email" placeholder="Email" class="">
+          <button type="submit" [disabled]="!passwordResetForm.valid">Send</button>
+          <div>
+            <p class="message pull-left"><a [routerLink]="['/auth/login']">Login</a></p>
+            <p class="message pull-right"><a [routerLink]="['/']">Dashboard</a></p>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </main>
