add confirmation popup

--- a/src/app/modules/auth/components/profile/profile.component.html
+++ b/src/app/modules/auth/components/profile/profile.component.html
@@ -17,7 +17,7 @@
             aria-controls="v-pills-password" aria-selected="false">
             <i class="far fa-unlock"></i> Change password
           </a>
-          <a class="nav-link text-red" href="javascript:;" ng-click="deleteAccount()">
+          <a class="nav-link text-red text-danger" href="javascript:;" (click)="deleteAccount()">
             <i class="fal fa-trash-alt"></i> Delete account
           </a>
         </div>
