--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<main class="login-main ">
+<div class="login-main ">
   <div class="container">
     <div class="login-page">
       <div class="form">
@@ -37,4 +37,4 @@
       </div>
     </div>
   </div>
-</main>
+</div>
