--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -4,17 +4,17 @@
       <div class="form">
         <form class="login-form" [formGroup]="passwordResetForm" (ngSubmit)="passwordReset()">
           <div class="login-logo">
-            <a href="https://www.blavatnikarchive.org/">
-              <img src="https://www.blavatnikarchive.org/assets/images/logo.png" alt="img">
+            <a [routerLink]="['']">
+              <img src="/assets/images/logo.png" alt="img">
             </a>
           </div>
           <p>Enter Your Email</p>
-          <!-- <div class="alert alert-danger" *ngIf="authError">
+          <div class="alert alert-danger" *ngIf="authError">
             <strong>Error! </strong>{{authError}}
           </div>
           <div class="alert alert-success" *ngIf="authSuccess">
             <strong>Success! </strong>{{authSuccess}}
-          </div> -->
+          </div>
 
           <div style="margin-bottom: 0px;" class="alert alert-danger" role="alert"
             *ngIf="passwordResetForm.get('email').touched && passwordResetForm.get('email').dirty && !passwordResetForm.get('email').valid">
@@ -28,7 +28,10 @@
           </div>
 
           <input name="email" formControlName="email" type="email" placeholder="Email" class="">
-          <button type="submit" [disabled]="!passwordResetForm.valid">Send</button>
+          <button type="submit" [disabled]="!passwordResetForm.valid">
+            <span *ngIf="showLoading">Send&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
+            <span *ngIf="!showLoading">Send</span>
+          </button>
           <div>
             <p class="message pull-left"><a [routerLink]="['/auth/login']">Login</a></p>
             <p class="message pull-right"><a [routerLink]="['/']">Dashboard</a></p>
