--- a/src/app/modules/auth/components/login/login-form.component.html
+++ b/src/app/modules/auth/components/login/login-form.component.html
@@ -21,7 +21,7 @@
         <label class="form-check-label" for="chk-remeber-me"></label>
         <label class="form-check-label" for="chk-remeber-me">Remember me</label>
       </div>
-      <p class="message pull-right"><a [routerLink]="'/forgotpassword'">Forgot Password?</a></p>
+      <p class="message pull-right"><a [routerLink]="['auth/forgotPassword']">Forgot Password?</a></p>
     </div>
   </div>
   <div class="login-bar">
@@ -32,6 +32,6 @@
   </div>
   <div class="login-create">
     <p class="message pull-left"><a style="cursor: default;" class="bf">Don’t have an account?</a></p>
-    <a class="pull-right" [routerLink]="'register'">Create account</a>
+    <a class="pull-right" [routerLink]="['auth/register']">Create account</a>
   </div>
 </form>
