--- a/src/app/modules/auth/components/login-dropdown/login-form.component.html
+++ b/src/app/modules/auth/components/login-dropdown/login-form.component.html
@@ -33,5 +33,6 @@
   <div class="login-create">
     <p class="message pull-left"><a style="cursor: default;" class="bf">Don’t have an account?</a></p>
     <a class="pull-right" [routerLink]="['auth/register']">Create account</a>
+    <a class="pull-right" href="javascript:void(0)" (click)="openLoginModal()">Login Modal</a>
   </div>
 </form>
